LESS beautifier updated

--- a/less/default.less
+++ b/less/default.less
@@ -1,1 +1,6 @@
-html { background-color: green; body { background-color: #fafafa; } };
+@import "util/colors";
+@import "util/mixins";
+
+* {
+	.borderBox();
+}
