Back in business

--- a/templates/pages/home.hbs
+++ b/templates/pages/home.hbs
@@ -1,3 +1,9 @@
-<header></header>
-<section></section>
-<footer></footer>
+<h1>Select and App</h1>
+<ul>
+	<li>
+		<a href="/react">React</a>
+	</li>
+	<li>
+		<a href="/jquery">jQuery</a>
+	</li>
+<ul>
