--- a/templates/layouts/default.hbs
+++ b/templates/layouts/default.hbs
@@ -14,7 +14,7 @@
 	</head>
 
 	<body id="{{pageId}}">
-		<main id="main">{{{body}}}</main>
+		<main>{{{body}}}</main>
 		{{#each css.body}}
 			<link href="{{this}}" rel="stylesheet">
 		{{/each}}
