--- a/styles/react/app.scss
+++ b/styles/react/app.scss
@@ -1,6 +1,6 @@
 @import "bootstrap";
 @import "components/spinner";
-@import "components/tags";
+//@import "components/tags";
 
 $blue: #fff;
 
@@ -107,4 +107,58 @@ body {
 	border-radius: 2rem;
 	margin-top: 2rem;
 	margin-bottom: 2rem;
+}
+
+.droptag {
+	ul {
+		margin: 0;
+		padding: 0;
+		li {
+			margin-bottom: 0.75rem;
+			> div {
+				padding-left: 1rem;
+				padding-right: 1.75rem;
+				padding-top: 0.25rem;
+				padding-bottom: 0.25rem;
+				background-color: #999;
+				display: inline-block;
+				position: relative;
+				border-radius: 0.25rem;
+				span {
+					height: .9rem;
+					width: .9rem;
+					line-height: .8rem;
+					text-align: center;
+					color: #999;
+					position: absolute;
+					top: 0.6rem;
+					right: 0.5rem;
+					border-radius: 0.5rem;
+					background-color: #333;
+					cursor: pointer;
+					display: block;
+					font-size: .7rem;
+					&:hover {
+						background-color: black;
+						color: white;
+					}
+				}
+			}
+			list-style-type: none;
+		}
+	}
+	label {
+		font-weight: 600;
+		font-size: 0.8em
+	}
+}
+
+.sort-it {
+	padding-top: 2rem;
+	text-align: center;
+	a {
+		&.active {
+			font-weight: 600;
+		}
+	}
 }
